# optimisation

./: CMakeLists.txt
app/: CMakeLists.txt  solve_test.cc  sprint_problem_test.cc
problem/: CMakeLists.txt
problem/include/: example_problem.h  problem.h
problem/src/: problem.cc
unconstrained/: CMakeLists.txt
unconstrained/include/: gauss_newton.h  levenberg_marquardt.h
unconstrained/src/: gauss_newton.cc  test.cc
